--- a/src/main/resources/assets/jeimultiblocks/lang/en_us.json
+++ b/src/main/resources/assets/jeimultiblocks/lang/en_us.json
@@ -1,4 +1,3 @@
 {
-    "jeimultiblocks.formMultiblock": "Multiblock with Hammer",
-    "jeimultiblocks.nameUnavailable": "Could not load multiblock name"
+    "jeimultiblocks.formMultiblock": "Multiblock with Hammer"
 }
