add translation for emi recipe category

--- a/src/main/resources/assets/jeimultiblocks/lang/en_us.json
+++ b/src/main/resources/assets/jeimultiblocks/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "jeimultiblocks.formMultiblock": "Multiblock with Hammer"
+    "jeimultiblocks.formMultiblock": "Multiblock with Hammer",
+    "emi.category.jeimultiblocks.plugin": "Multiblock with Hammer"
 }
